fix project card spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,7 +271,6 @@ nav ul li {
 .icon {
   width: 11.875rem;
   height: 11.25rem;
-  transition: transform 0.3s ease-in-out;
 }
 
 .icon-card {
@@ -279,11 +278,6 @@ nav ul li {
   border-radius: 11px;
   padding: 20px;
   margin: 10px;
-  transition: transform 0.3s ease-in-out;
-}
-
-.icon:hover {
-  transform: scale(1.1);
 }
 
 .projects {
@@ -328,26 +322,39 @@ nav ul li {
 
 .project-title {
   font-size: 1.5em;
+  margin-top: auto;
 }
 
 .project-pic {
   border-radius: 11px;
+  margin-top: 1rem;
 }
 
-.project-container {
+.project-container-one {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   text-align: center;
   width: 21.875rem;
   padding: 2rem;
-  min-height: 50vh;
+  min-height: 21rem;
+  box-sizing: border-box;
+}
+
+.project-container-two {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 21.875rem;
+  padding: 2rem;
+  min-height: 18rem;
   box-sizing: border-box;
 }
 
 .project-details {
   text-align: justify;
+  margin-bottom: 0.5rem;
 }
 
 .project-card {
